--- a/EindopdrachtPRG3/MainWindow.xaml
+++ b/EindopdrachtPRG3/MainWindow.xaml
@@ -46,6 +46,13 @@
                         </StackPanel>
                     </Button>
 
+                    <Button Height="30px" Width="100px" Background="Transparent" HorizontalAlignment="Left" Foreground="White" BorderBrush="Transparent" Click="SelectExe" >
+                        <StackPanel Orientation="Horizontal">
+                            <Image x:Name="file" Margin="0,0,5,0" Height="20px" HorizontalAlignment="Left" Source="/Assets/joystick.png"/>
+                            <TextBlock VerticalAlignment="Center">Add game</TextBlock>
+                        </StackPanel>
+                    </Button>
+
                 </StackPanel>
 
             </Grid>
