--- a/EindopdrachtPRG3/MainWindow.xaml
+++ b/EindopdrachtPRG3/MainWindow.xaml
@@ -5,7 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EindopdrachtPRG3"
         mc:Ignorable="d"
-        Title="MainWindow" MinHeight="450" MaxHeight="450" MinWidth="800" MaxWidth="800" Height="450" Width="800" Background="#121212" ResizeMode="NoResize" WindowStyle="None">
+        Title="MainWindow" MinHeight="550" MaxHeight="550" MinWidth="800" MaxWidth="800" Height="550" Width="800" Background="#121212" ResizeMode="NoResize" WindowStyle="None">
+
+    <Window.Resources>
+        <Style TargetType="StackPanel" x:Key="GameContainerStyle">
+            <Style.Resources>
+                <Style TargetType="TextBlock">
+                    <Setter Property="Foreground" Value="White" />
+                </Style>
+                <Style TargetType="Border">
+                    <Setter Property="BorderBrush" Value="White" />
+                    <Setter Property="BorderThickness" Value="1" />
+                    <Setter Property="Margin" Value="4 10"></Setter>
+                    <Setter Property="Height" Value="140"></Setter>
+
+                </Style>
+            </Style.Resources>
+        </Style>
+    </Window.Resources>
+
 
     <Grid>
         <Grid Height="15" VerticalAlignment="Top">
@@ -56,7 +74,7 @@
                 </StackPanel>
 
             </Grid>
-            <Grid x:Name="Main" Grid.Column="1" Height="430" VerticalAlignment="Bottom">
+            <Grid x:Name="Main" Grid.Column="1" Margin="0,22,0,10">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
